Update graphreader